cmake_minimum_required(VERSION 3.0.2)
project(least_squares_approximation)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_BUILD_TYPE Release)
add_compile_options(-std=c++17 -Wpedantic)
add_executable(impl1 src/impl1.cpp)
add_executable(impl2 src/impl2.cpp)
add_executable(impl3 src/impl3.cpp)
